# microsoft-todo-py

./: README.md  pyproject.toml  requirements.txt
examples/: auth.py  sync.py
examples/webserver/: __init__.py  kodos.py  requirements.txt
examples/webserver/kodos/: package-lock.json  package.json
examples/webserver/kodos-frontend/: package-lock.json  package.json
examples/webserver/kodos-frontend/src/: App.css  App.jsx  Kodos.jsx  KodosItem.jsx  KodosSettings.jsx  Utils.js  index.css
examples/webserver/kodos/src/: App.css  App.jsx  KodosSettings.jsx  User.js  Utils.js
examples/webserver/templates/: index.html
mstodo/: __init__.py  auth.py  constant.py  exceptions.py  mstodo.py  sync.py  util.py
mstodo/api/: base.py  tasks.py
mstodo/models/: __init__.py  base.py  fields.py  hashtag.py  preferences.py  task.py  task_parser.py  taskfolder.py  user.py
